--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
         }
     </style>
     <header>
-        <h1>Home Frsdfdsom Work</h1>
+        <h1>Home Work uh-oh</h1>
         <p>Front-End-Framework</p>
     </header>
 
 </body>
 
-</html>
+</html
