--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,20 @@
         p {
             font-size: 1.5rem;
         }
+        
+        nav {
+            display: flex;
+            flex-direction: row;
+            margin: 0 auto;
+            margin-right: 2rem;
+        }
     </style>
     <header>
+        <nav>
+            <li>Home</li>
+            <li>About</li>
+            <li>Merch</li>
+        </nav>
         <h1>Home Work uh-oh</h1>
         <p>Front-End-Framework</p>
     </header>
