--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,9 @@
         nav {
             display: flex;
             flex-direction: row;
-            margin: 0 auto;
             margin-right: 2rem;
+            text-align: center;
+            list-style-type: none;
         }
     </style>
     <header>
