--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,13 @@
         nav {
             display: flex;
             flex-direction: row;
+            list-style-type: none;
+            margin: 0 auto;
+        }
+        
+        nav li {
             margin-right: 2rem;
             text-align: center;
-            list-style-type: none;
         }
     </style>
     <header>
