--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
             flex-direction: row;
             list-style-type: none;
             margin: 0 auto;
+            width: 200px
         }
         
         nav li {
